Panel component applied to Address Book
Former-commit-id: c5dfd3b8ef4b05dbb5b25f101b06b4132d7f5e9d

--- a/app/CSS/app.global.css
+++ b/app/CSS/app.global.css
@@ -136,6 +136,10 @@ input[type="text"]::placeholder {
   vertical-align: middle;
 }
 
+.dim {
+  opacity: 0.5;
+}
+
 /*------------------------------------------------------------------
 MEDIA QUERIES
 ------------------------------------------------------------------*/
