global styles tuning
Former-commit-id: cce0aac907e81402fe29007be4d84694e7a6049f

--- a/app/CSS/base/palette.css
+++ b/app/CSS/base/palette.css
@@ -8,7 +8,7 @@ Grid
 :root {
   /* COLOR PALETTE VARIABLES */
   --color-1: #111111; /* <-- Dark Grey */
-  --color-2: #0ca4fb; /* <-- Nexus Blue */
+  --color-2: #00b7fa; /* <-- Nexus Blue */
   --color-3: #556070; /* <-- Light Grey */
   --color-4: #34495e; /* <-- Medium Grey */
   --color-5: #ffffff; /* <-- White */
