TBR-66 moved the movelink to a button in the panel
Former-commit-id: 9a318e86175a378189abb064a48b7e76cc7a3cf2

--- a/app/components/SendRecieve/style.css
+++ b/app/components/SendRecieve/style.css
@@ -2,6 +2,13 @@ textarea {
   resize: vertical;
 }
 
+#moveButton {
+  position: absolute;
+  left: inherit;
+  right: 0;
+  top: 0;
+}
+
 #sendrecieve {
   position: relative;
   height: 100%;
