renamed TrustList folder
Former-commit-id: e532983f5b0284f730e50ddb78f8f00e6a9e94c9

--- a/app/CSS/app.global.css
+++ b/app/CSS/app.global.css
@@ -22,7 +22,7 @@
 @import "~components/Header/style.css";
 @import "~components/Addressbook/style.css";
 @import "~components/BlockExplorer/style.css";
-@import "~components/List/style.css";
+@import "~components/TrustList/style.css";
 @import "~components/Market/style.css";
 @import "~components/Overview/style.css";
 @import "~components/StyleGuide/style.css";
