Buttons And inputs Borderd. AddressModal BorderFix, Translations Added
Former-commit-id: 24503527acbaed89ed0cb420edf685f363531ff9

--- a/app/components/Addressbook/style.css
+++ b/app/components/Addressbook/style.css
@@ -210,7 +210,7 @@ select {
 .myAddressTable {
   max-width: 100%;
   /* min-width: 50%; */
-
+  border-left: 0px;
   overflow-x: hidden;
   overflow-y: scroll;
   height: 280px;
