Overview page revamp
Former-commit-id: e4917d012ca2c99868c3d9769fe8c9e0cc928fab

--- a/app/components/Header/style.css
+++ b/app/components/Header/style.css
@@ -119,3 +119,21 @@ MEDIA QUERIES
 }
 @media (min-width: 1600px) {
 }
+
+/*------------------------------------------------------------------
+PROGRESS BAR STYLING
+------------------------------------------------------------------*/
+.progress-bar {
+  position: relative;
+  height: 20px;
+  width: 350px;
+  border-radius: 50px;
+  border: 1px solid #333;
+}
+
+.filler {
+  background: var(--color-2);
+  height: 100%;
+  border-radius: inherit;
+  transition: width 0.2s ease-in;
+}
