--- a/app/CSS/fonts/stylesheet.css
+++ b/app/CSS/fonts/stylesheet.css
@@ -1,16 +1,13 @@
 @font-face {
-    font-family: 'Noto Sans';
-    src: url('NotoSans-Bold.woff2') format('woff2'),
-        url('NotoSans-Bold.woff') format('woff');
-    font-weight: bold;
-    font-style: normal;
+  font-family: "Noto Sans";
+  src: url("NotoSans-Bold.woff2") format("woff2");
+  font-weight: bold;
+  font-style: normal;
 }
 
 @font-face {
-    font-family: 'Noto Sans';
-    src: url('NotoSans.woff2') format('woff2'),
-        url('NotoSans.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+  font-family: "Noto Sans";
+  src: url("NotoSans.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
 }
-
