--- a/app/CSS/controls/panel.css
+++ b/app/CSS/controls/panel.css
@@ -51,7 +51,7 @@ MEDIA QUERIES
 }
 @media (min-width: 480px) {
   .panel {
-    padding: calc(var(--line-height) * 1em);
+    padding: calc((var(--line-height) * 1em) / 2 );
   }
 }
 @media (min-width: 600px) {
