--- a/app/components/SendRecieve/style.css
+++ b/app/components/SendRecieve/style.css
@@ -265,9 +265,9 @@ textarea {
 #AddressTable {
   max-width: 100%;
   /* min-width: 50%; */
-  border-left: 0px;
+  border: 0px;
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: auto;
   height: 325px;
   display: block;
   width: 100%;
