--- a/app/components/Header/style.css
+++ b/app/components/Header/style.css
@@ -20,7 +20,7 @@
 .icon {
   display: inline-block;
   position: relative;
-  padding: 0 5px;
+  margin: 0 5px;
   width: 20px;
   height: 20px;
   filter: var(--icon-menu);
