--- a/app/CSS/fonts/stylesheet.css
+++ b/app/CSS/fonts/stylesheet.css
@@ -11,3 +11,17 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+  font-family: "Ubuntu Mono";
+  src: url("UbuntuMono-Bold.woff2") format("woff2");
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Ubuntu Mono";
+  src: url("UbuntuMono-Regular.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
+}
