Both Console and Core output will wordwrap, TBR-75
Former-commit-id: a337f7b83c3776bd9261fc6bc7c0c0b1cdc69415

--- a/app/components/Terminal/style.css
+++ b/app/components/Terminal/style.css
@@ -52,6 +52,7 @@
 	border: 1px solid rgba(255,255,255,0.1);
 	overflow: auto;
 	font-family: var(--mono-font-family);
+	word-break: break-all;
 }
 
 
