Dir Input Style
Former-commit-id: 0c6ae4c9fea57106c11217c6698b5c71b5d48fd2

--- a/app/components/Settings/style.css
+++ b/app/components/Settings/style.css
@@ -229,6 +229,15 @@ form {
   width: 420px;
   max-width: 100%;
 }
+.Folder {
+  color: transparent;
+  display: inline-block;
+  caret-color: transparent;
+  font-size: 2em;
+  text-shadow: 0 0 0 gray;
+  cursor: pointer;
+}
+
 /*------------------------------------------------------------------
 MEDIA QUERIES
 ------------------------------------------------------------------*/
