--- a/app/CSS/fonts/stylesheet.css
+++ b/app/CSS/fonts/stylesheet.css
@@ -13,15 +13,8 @@
 }
 
 @font-face {
-  font-family: "Ubuntu Mono";
-  src: url("UbuntuMono-Bold.woff2") format("woff2");
-  font-weight: bold;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Ubuntu Mono";
-  src: url("UbuntuMono-Regular.woff2") format("woff2");
+  font-family: "Roboto Mono";
+  src: url("RobotoMono-Regular.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
 }
