--- a/app/components/Header/style.css
+++ b/app/components/Header/style.css
@@ -50,7 +50,9 @@
   position: absolute;
   bottom: 80%;
   right: 0px;
-  height: 55px;
+  /* height: 55px; */
+  padding-top: 0;
+  padding-bottom: 0;
 
   font-size: 10px;
   border: 5px solid var(--color-5);
