--- a/app/components/Header/style.css
+++ b/app/components/Header/style.css
@@ -20,9 +20,8 @@
 .icon {
   display: inline-block;
   position: relative;
-  margin: 0 5px;
-  width: 20px;
-  height: 20px;
+  margin: 0 7px;
+  font-size: 20px;
   filter: var(--icon-menu);
 }
 
