refined Address Book UI
Former-commit-id: 24ac4d664be111330cbe17c5067daa7fda536ca3

--- a/app/CSS/app.global.css
+++ b/app/CSS/app.global.css
@@ -85,6 +85,10 @@ input[type="text"]::placeholder {
   opacity: 0.5;
 }
 
+.flex {
+  display: flex;
+}
+
 /*------------------------------------------------------------------
 MEDIA QUERIES
 ------------------------------------------------------------------*/
