fixed icon font size
Former-commit-id: e52cddb2485dc540d906fcc0e609962598fcff77

--- a/app/components/Header/style.css
+++ b/app/components/Header/style.css
@@ -21,8 +21,11 @@
   display: inline-block;
   position: relative;
   margin: 0 7px;
-  font-size: 20px;
   filter: var(--icon-menu);
+}
+
+.icon > svg {
+  font-size: 20px;
 }
 
 .icon .tooltip {
