--- a/app/CSS/base/forms.css
+++ b/app/CSS/base/forms.css
@@ -27,7 +27,7 @@ fieldset {
 
 textarea,
 select,
-input[type="color"],
+/* input[type="color"],
 input[type="date"],
 input[type="datetime"],
 input[type="datetime-local"],
@@ -41,7 +41,8 @@ input[type="tel"],
 input[type="text"],
 input[type="time"],
 input[type="url"],
-input[type="week"] {
+input[type="week"] { */
+input {
   box-sizing: border-box;
   margin: calc(var(--input-border-width) * -1) 0; /* if there is a border reduce margin so it sits properly on the vertical scale */
   padding: 0.125em 0.5em;
@@ -57,7 +58,7 @@ input[type="week"] {
 
 textarea:focus,
 select:focus,
-input[type="color"]:focus,
+/* input[type="color"]:focus,
 input[type="date"]:focus,
 input[type="datetime"]:focus,
 input[type="datetime-local"]:focus,
@@ -71,7 +72,8 @@ input[type="tel"]:focus,
 input[type="text"]:focus,
 input[type="time"]:focus,
 input[type="url"]:focus,
-input[type="week"]:focus {
+input[type="week"]:focus { */
+input:focus {
   color: var(--input-focus-color);
   outline: 2px solid var(--color-4);
 }
