TextBox & form controls applied in Settings
Former-commit-id: ce5c6dae78054f16f64d1aedbc90b52d72b26cad

--- a/app/CSS/app.global.css
+++ b/app/CSS/app.global.css
@@ -89,6 +89,10 @@ input[type="text"]::placeholder {
   display: flex;
 }
 
+.flex.center {
+  align-items: center;
+}
+
 /*------------------------------------------------------------------
 MEDIA QUERIES
 ------------------------------------------------------------------*/
