WrappedTextBox & adjusted usages
Former-commit-id: cb4615307b753fa1d917d0acc7520bc50cf732ae

--- a/app/CSS/app.global.css
+++ b/app/CSS/app.global.css
@@ -93,6 +93,10 @@ input[type="text"]::placeholder {
   align-items: center;
 }
 
+.flex.stretch {
+  align-items: stretch;
+}
+
 /*------------------------------------------------------------------
 MEDIA QUERIES
 ------------------------------------------------------------------*/
