--- a/app/CSS/controls/tooltip.css
+++ b/app/CSS/controls/tooltip.css
@@ -4,8 +4,8 @@ Switch
 */
 
 :root {
-  --tooltip-background-color: var(--color-1);
-  --tooltip-color: var(--color-5);
+  --tooltip-background-color: #0f1b1f;
+  --tooltip-color: #e6e9eb;
 }
 
 .tooltip {
@@ -17,7 +17,7 @@ Switch
   border-radius: 0.25em;
   padding: 0.5em 0.75em;
   position: absolute;
-  /* box-shadow: 0 2px 20px rgba(0,0,0,0.5); */
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
   /* filter: drop-shadow(0 2px 10px rgba(0, 0, 0, 0.5)); */
   z-index: 1;
 }
@@ -93,7 +93,6 @@ Switch
 *:hover > .tooltip {
   visibility: visible;
 }
-
 
 /*------------------------------------------------------------------
 MEDIA QUERIES
