improved Security Settings page UI & code
Former-commit-id: 9c6344031fb6579a2fe2b019026b20e10fa43a03

--- a/app/components/Settings/style.css
+++ b/app/components/Settings/style.css
@@ -84,8 +84,8 @@ form {
   position: relative;
   /* padding: calc(var(--line-height) * 1em);
 	padding-top: 0; */
-  border: 1px solid transparent;
-  text-align: left;
+  /* border: 1px solid transparent;
+  text-align: left; */
 }
 
 .note {
