--- a/app/CSS/base/forms.css
+++ b/app/CSS/base/forms.css
@@ -174,7 +174,7 @@ form div.field.aligned label {
   box-sizing: border-box;
   position: absolute;
   display: inline-block;
-  /* visibility: hidden; */
+  visibility: hidden;
   opacity: 0;
   background: #444;
   color: #fff;
