Trust List Loading, Duplicate stake ToolTip, About Menu (Mac Os) web,git
Former-commit-id: 9bdcc1f183bc289bd78c244c281ef4a776fa73b9

--- a/app/components/Settings/style.css
+++ b/app/components/Settings/style.css
@@ -238,6 +238,13 @@ form {
   cursor: pointer;
 }
 
+.selfadapt {
+  min-width: 13.5ch;
+  text-indent: 5px;
+  font-size: 1;
+  width: calc(var(--size) * 1ch);
+}
+
 /*------------------------------------------------------------------
 MEDIA QUERIES
 ------------------------------------------------------------------*/
