Data Directory Name
Former-commit-id: a37e79d9c528114571b003729ec1c5a04a0e3b8a

--- a/app/components/Settings/style.css
+++ b/app/components/Settings/style.css
@@ -239,10 +239,7 @@ form {
 }
 
 .selfadapt {
-  min-width: 13.5ch;
-  text-indent: 5px;
-  font-size: 1;
-  width: calc(var(--size) * 1ch);
+  padding: 0;
 }
 
 /*------------------------------------------------------------------
