Search input fields Standardized
Former-commit-id: 2b620f3de7b720e0fe2162335b81e1d2724deed2

--- a/app/App/SendPage/style.css
+++ b/app/App/SendPage/style.css
@@ -274,11 +274,17 @@ textarea {
   margin-top: 10%;
 }
 
+.contactNames {
+  color: var(--color-2);
+  animation: tdd 0.5s;
+}
 .short-column {
   width: 10%;
 }
 .long-column {
-  width: 70%;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
 .searchBar {
   width: 100%;
