--- a/app/App/SendPage/style.css
+++ b/app/App/SendPage/style.css
@@ -271,9 +271,11 @@ textarea {
   height: 325px;
   display: block;
   width: 100%;
-  margin-top: 10%;
 }
 
+.tda {
+  /* width: 79%; */
+}
 .contactNames {
   color: var(--color-2);
   animation: tdd 0.5s;
@@ -284,13 +286,11 @@ textarea {
 .long-column {
   width: 100%;
   display: flex;
+
   justify-content: space-between;
 }
 .searchBar {
-  width: 100%;
-  float: right;
-  height: 20px;
-  margin-top: -6.8%;
+  margin-right: 100px;
 }
 .AddressThead {
   position: absolute;
