If More than one Address the table Would stack Addresses Fixed
Former-commit-id: 3398111270da74b20f7351df9024a7fa3284c2ea

--- a/app/App/AddressBook/style.css
+++ b/app/App/AddressBook/style.css
@@ -9,6 +9,12 @@
   flex: 0;
 }
 
+.AddressThead {
+  position: absolute;
+  margin-top: -5%;
+  width: 95%;
+}
+
 #addressbook > .panel {
   flex: 1;
   overflow-y: auto;
