--- a/app/CSS/controls/react-table.css
+++ b/app/CSS/controls/react-table.css
@@ -7,6 +7,9 @@
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
+  --colorPrimary: pink;
+  --colorSeconday: white;
+  --colorAccent: white;
 }
 
 .ReactTable * {
@@ -32,7 +35,7 @@
   overflow: auto;
 
   /* custom styles */
-  border: 1px solid var(--border-color);
+  border: 1px solid var(--colorPrimary);
   border-radius: .125em;
 }
 
@@ -88,22 +91,22 @@
 .ReactTable .rt-thead .rt-td {
   line-height: normal;
   position: relative;
-  background-color: var(--border-color);
+  background-color: var(--colorPrimary);
 
   padding-top: calc(var(--line-height) * var(--table-padded-padding-vertical));
   padding-bottom: calc(var(--line-height) * var(--table-padded-padding-vertical));
   padding-left: calc(var(--line-height) * var(--table-padded-padding-horizontal));
   padding-right: calc(var(--line-height) * var(--table-padded-padding-horizontal));
-  border-left: 1px solid var(--border-color);
+  border-left: 1px solid var(--colorPrimary);
 }
 
 .ReactTable .rt-thead .rt-th.-sort-asc,
 .ReactTable .rt-thead .rt-td.-sort-asc {
-  box-shadow: inset 0 3px 0 0 var(--color-2);
+  box-shadow: inset 0 3px 0 0 var(--colorAccent);
 }
 .ReactTable .rt-thead .rt-th.-sort-desc,
 .ReactTable .rt-thead .rt-td.-sort-desc {
-  box-shadow: inset 0 -3px 0 0 var(--color-2);
+  box-shadow: inset 0 -3px 0 0 var(--colorAccent);
 }
 
 .ReactTable .rt-thead .rt-th.-cursor-pointer,
@@ -147,14 +150,14 @@
 }
 
 .ReactTable .rt-thead .rt-header-pivot:after {
-  border-color: rgba(255, 255, 255, 0);
+  border-color: rgba(243, 170, 170, 0.342);
   border-left-color: #fff;
   border-width: 8px;
   margin-top: -8px;
 }
 
 .ReactTable .rt-thead .rt-header-pivot:before {
-  border-color: rgba(102, 102, 102, 0);
+  border-color: rgba(255, 175, 175, 0.65);
   border-left-color: #f7f7f7;
   border-width: 10px;
   margin-top: -10px;
@@ -175,7 +178,7 @@
 }
 
 .ReactTable .rt-tbody .rt-tr-group {
-  border-bottom: 1px solid var(--border-color);
+  border-bottom: 1px solid var(--colorPrimary);
 }
 
 .ReactTable .rt-tbody .rt-tr-group:last-child {
@@ -187,7 +190,7 @@
   padding-bottom: calc(var(--line-height) * var(--table-padded-padding-vertical));
   padding-left: calc(var(--line-height) * var(--table-padded-padding-horizontal));
   padding-right: calc(var(--line-height) * var(--table-padded-padding-horizontal));
-  border-left: 1px solid var(--border-color);
+  border-left: 1px solid var(--colorPrimary);
 }
 
 .ReactTable .rt-tbody .rt-td:first-child {
@@ -309,10 +312,10 @@
   border-right: 0;
 }
 .ReactTable.-striped .rt-tr.-odd {
-  background: rgba(0, 0, 0, 0.03);
+  background: rgba(0, 0, 0, 0.1);
 }
 .ReactTable.-highlight .rt-tbody .rt-tr:not(.-padRow):hover {
-  background: rgba(0, 0, 0, 0.05);
+  background: rgba(255, 255, 255, 0.05);
 }
 .ReactTable .-pagination {
   z-index: 1;
