Working on Themeing the Page select and Page input in the Table.
Former-commit-id: 6204888fc3d3fca75aa4cc811c6f8ec9121f59a9

--- a/app/CSS/controls/react-table.css
+++ b/app/CSS/controls/react-table.css
@@ -357,17 +357,18 @@
   padding: 6px;
   font-size: 1em;
   color: var(--color-5);
-  background: rgba(0, 0, 0, 0.1);
+  background:  rgba(255, 255, 255, 0.1);
   transition: all 0.1s ease;
   cursor: pointer;
   outline: none;
 }
 .ReactTable .-pagination .-btn[disabled] {
   opacity: 0.5;
+  background:  rgba(0, 0, 0, 0.1);
   cursor: default;
 }
 .ReactTable .-pagination .-btn:not([disabled]):hover {
-  background: rgba(0, 0, 0, 0.3);
+  background:  rgba(255, 255, 255, 0.2);
   color: #fff;
 }
 .ReactTable .-pagination .-previous,
@@ -412,6 +413,8 @@
 }
 .ReactTable .-pagination .-pageSizeOptions {
   margin: 3px 10px;
+  color: var(--colorPrimary);
+  background: rgba(0, 0, 0, 0.02)
 }
 .ReactTable .rt-noData {
   display: block;
