links to exchanges
Former-commit-id: a94a02c21d7110735e7d3343e8e05235b5a4358b

--- a/app/App/Market/style.css
+++ b/app/App/Market/style.css
@@ -30,6 +30,10 @@
   height: 60px;
 }
 
+.exchangeLogo:hover {
+  box-shadow: 0px 0px 5px #fff;
+}
+
 .marketDepthInner {
   position: relative;
   flex: 1;
