--- a/app/CSS/app.global.css
+++ b/app/CSS/app.global.css
@@ -46,6 +46,11 @@
   filter: var(--icon-menu);
 }
 
+*, *::after, *::before {
+	-webkit-user-drag: none;
+	-webkit-app-region: no-drag;
+}
+
 /*------------------------------------------------------------------
 MEDIA QUERIES
 ------------------------------------------------------------------*/
