cleaned up some unused dependencies
Former-commit-id: 44f948a9f836cc28c0b05c293e86da1595eb73c8

--- a/app/CSS/app.global.css
+++ b/app/CSS/app.global.css
@@ -11,7 +11,6 @@
 @import "./controls/progress.css";
 @import "./controls/react-table.css";
 
-@import "~react-activity/lib/Squares/Squares.css";
 :root {
   /* COLOR PALETTE VARIABLES */
   --color-6: #ffffff; /* <-- White */
@@ -46,9 +45,11 @@
   filter: var(--icon-menu);
 }
 
-*, *::after, *::before {
-	-webkit-user-drag: none;
-	-webkit-app-region: no-drag;
+*,
+*::after,
+*::before {
+  -webkit-user-drag: none;
+  -webkit-app-region: no-drag;
 }
 
 /*------------------------------------------------------------------
