--- a/app/CSS/controls/react-table.css
+++ b/app/CSS/controls/react-table.css
@@ -36,7 +36,7 @@
 
   /* custom styles */
   border: 1px solid var(--colorPrimary);
-  border-radius: .125em;
+  border-radius: 0.125em;
 }
 
 .ReactTable .rt-thead {
@@ -82,7 +82,7 @@
 
 .ReactTable .rt-thead .rt-tr {
   text-align: left;
-  font-size: .8125em;
+  font-size: 0.8125em;
   text-transform: uppercase;
   letter-spacing: 1px;
 }
@@ -94,9 +94,15 @@
   background-color: var(--colorPrimary);
 
   padding-top: calc(var(--line-height) * var(--table-padded-padding-vertical));
-  padding-bottom: calc(var(--line-height) * var(--table-padded-padding-vertical));
-  padding-left: calc(var(--line-height) * var(--table-padded-padding-horizontal));
-  padding-right: calc(var(--line-height) * var(--table-padded-padding-horizontal));
+  padding-bottom: calc(
+    var(--line-height) * var(--table-padded-padding-vertical)
+  );
+  padding-left: calc(
+    var(--line-height) * var(--table-padded-padding-horizontal)
+  );
+  padding-right: calc(
+    var(--line-height) * var(--table-padded-padding-horizontal)
+  );
   border-left: 1px solid var(--colorPrimary);
 }
 
@@ -179,6 +185,7 @@
 
 .ReactTable .rt-tbody .rt-tr-group {
   border-bottom: 1px solid var(--colorPrimary);
+  max-height: 2.75em;
 }
 
 .ReactTable .rt-tbody .rt-tr-group:last-child {
@@ -187,9 +194,15 @@
 
 .ReactTable .rt-tbody .rt-td {
   padding-top: calc(var(--line-height) * var(--table-padded-padding-vertical));
-  padding-bottom: calc(var(--line-height) * var(--table-padded-padding-vertical));
-  padding-left: calc(var(--line-height) * var(--table-padded-padding-horizontal));
-  padding-right: calc(var(--line-height) * var(--table-padded-padding-horizontal));
+  padding-bottom: calc(
+    var(--line-height) * var(--table-padded-padding-vertical)
+  );
+  padding-left: calc(
+    var(--line-height) * var(--table-padded-padding-horizontal)
+  );
+  padding-right: calc(
+    var(--line-height) * var(--table-padded-padding-horizontal)
+  );
   border-left: 1px solid var(--colorPrimary);
 }
 
@@ -331,21 +344,20 @@
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   /* padding: 3px; */
-  margin-top: .5em;
+  margin-top: 0.5em;
   box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.1);
   border-top: 2px solid rgba(0, 0, 0, 0.1);
 }
 .ReactTable .-pagination input,
 .ReactTable .-pagination select {
-   border: 1px solid rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(0, 0, 0, 0.1);
   background: rgba(255, 255, 255, 0);
   padding: 5px 7px;
   font-size: inherit;
   color: var(--colorSecondary);
   border-radius: 3px;
   font-weight: normal;
-  outline: none; 
-  
+  outline: none;
 }
 
 .ReactTable .-pagination span::after {
@@ -358,11 +370,11 @@
   background: var(--colorPrimary);
 }
 .ReactTable .-pagination option {
- background: var(--colorPrimary);
- background-blend-mode: difference;
- filter: invert(1);
- font-weight: normal;
- outline: none; 
+  background: var(--colorPrimary);
+  background-blend-mode: difference;
+  filter: invert(1);
+  font-weight: normal;
+  outline: none;
 }
 .ReactTable .-pagination .-btn {
   -webkit-appearance: none;
@@ -376,18 +388,18 @@
   padding: 6px;
   font-size: 1em;
   color: var(--color-5);
-  background:  rgba(255, 255, 255, 0.1);
+  background: rgba(255, 255, 255, 0.1);
   transition: all 0.1s ease;
   cursor: pointer;
   outline: none;
 }
 .ReactTable .-pagination .-btn[disabled] {
   opacity: 0.5;
-  background:  rgba(0, 0, 0, 0.1);
+  background: rgba(0, 0, 0, 0.1);
   cursor: default;
 }
 .ReactTable .-pagination .-btn:not([disabled]):hover {
-  background:  rgba(255, 255, 255, 0.2);
+  background: rgba(255, 255, 255, 0.2);
   color: #fff;
 }
 .ReactTable .-pagination .-previous,
@@ -433,7 +445,7 @@
 .ReactTable .-pagination .-pageSizeOptions {
   margin: 3px 10px;
   color: var(--colorPrimary);
-  background: rgba(0, 0, 0, 0.02)
+  background: rgba(0, 0, 0, 0.02);
 }
 .ReactTable .rt-noData {
   display: block;
@@ -493,7 +505,6 @@
   -ms-user-select: none;
   user-select: none;
 }
-
 
 /*------------------------------------------------------------------
 MEDIA QUERIES
